# robotic_pipecutting

./: README.md  dependencies.repos  launch_instructions.txt
cartesian_path_waypoints/: CMakeLists.txt  package.xml
cartesian_path_waypoints/launch/: cartesian_path.launch.py
cartesian_path_waypoints/src/: cartesian_path_node.cpp
custom_desc_moveit_pkg/: CMakeLists.txt  README.md  package.xml
custom_desc_moveit_pkg/launch/: ur_moveit.launch.py  ur_moveit_test.launch.py  ur_sim_control.launch.py
custom_desc_moveit_pkg/meshes/ur10e/visual/: nozzle.dae
custom_desc_moveit_pkg/srdf/: ur.srdf.xacro
custom_desc_moveit_pkg/urdf/: ur_gz.ros2_control.xacro  ur_gz.urdf.xacro  ur_macro.xacro
custom_desc_moveit_pkg/urdf/inc/: ur_joint_control.xacro
eval_tools/: setup.py
eval_tools/eval_tools/: joint_states_eef_pos_logger.py  joint_states_logger.py
gazebo-ros-bridge/: CMakeLists.txt  package.xml
gazebo-ros-bridge/src/: gazebo-ros-bridge.cpp
generic_cutting_demo/: CMakeLists.txt  package.xml
generic_cutting_demo/launch/: demo.launch.py  generic_controller_movegroup.launch.py
moveit_cart_path/: CMakeLists.txt  package.xml
moveit_cart_path/include/: collision_object_spawner.hpp
moveit_cart_path/src/: cart_path.cpp  cart_path_waypoints.cpp  collision_object_spawner.cpp  moveit_cart_path_test.cpp  spawn_cylinder.cpp
moveit_servo_example/: CMakeLists.txt  package.xml
moveit_servo_example/launch/: servo.launch.py
moveit_servo_example/src/: servo_controller.cpp  servo_controllershit.cpp  servo_controllertest.cpp  test.cpp
object_spawner/: CMakeLists.txt  package.xml
object_spawner/include/: collision_object_spawner.hpp
object_spawner/launch/: spawn_mesh.launch.py
object_spawner/src/: circle_projection.cpp  collision_object_spawner.cpp
pilz_planner/: CMakeLists.txt  package.xml
pilz_planner/launch/: pilz.launch.py
pilz_planner/src/: pilz_driver.cpp
python_scripts/: anothertest.py  cube_slider.py  db_extractor.py  db_parser.py  guitest.py  multiwin.py  open_gl_slider.py  pcl_processing2.py  pcl_processing_old.py  poses.json  poses.txt  reach.db.xml  testcircle.py  testtest.py  thisworkey.pcd  widgets.py
reach_config/: CMakeLists.txt  launch_analysis.txt  package.xml
reach_config/config/: complex.ply  complex_shape.ply  cylinder.pcd  cylinder.ply  cylinder_closer.pcd  cylinder_closer.ply  cylinder_lower.pcd  cylinder_lower.ply  cylinder_lower_away.pcd  reach_config.yaml  test.pcd  thisworkey.pcd
reach_config/launch/: setup.launch.py  setup_joint_topic.launch.py
reach_db_parser/: CMakeLists.txt  package.xml
reach_db_parser/src/: reach_db_parser_node.cpp
reach_planner/: CMakeLists.txt  package.xml
reach_planner/config/: config.yaml  config_fanuc.yaml  config_ur20.yaml  config_ur20_rotated.yaml  config_ur5.yaml  config_ur5_rotated.yaml  reach_config.yaml  reach_config_fanuc.yaml  reach_config_ur20.yaml
reach_planner/launch/: launch_example.txt  path_projection.launch.py  pipeline.launch.py  reach_analysis.launch.py
reach_planner/scripts/: db_extractor.py  guitest_welding.py  pcd_to_poses.py  pcl_processing.py  pose_visualizer.py  requirements.txt
reach_ros_display_custom/: CMakeLists.txt  package.xml  reach_ros_display_custom.xml
reach_ros_display_custom/include/reach_ros/display/: ros_display_custom.hpp
reach_ros_display_custom/src/display/: ros_display_custom.cpp
reach_utilizer/: CMakeLists.txt  package.xml
reach_utilizer/results/: reach.db.xml
reach_utilizer/src/: reach_db_server.cpp  test.cpp
trajectory_seed_generator/: CMakeLists.txt
trajectory_seed_generator/include/: seed_gen.hpp
trajectory_seed_generator/src/: seed_gen.cpp
ur20_custom_description/: CMakeLists.txt
ur20_custom_description copy/: package.xml
ur20_custom_description copy/launch/: view_robot.launch.py
ur20_custom_description copy/meshes/visual/: nozzle_oriented.dae
ur20_custom_description/launch/: view_robot.launch.py
ur20_custom_description/urdf/: custom_ur.urdf.xacro  custom_ur_macro_rotated.xacro  custom_ur_rotated.urdf.xacro
ur20_custom_moveit_config/: .setup_assistant  package.xml
ur20_custom_moveit_config/config/: custom_ur.ros2_control.xacro  custom_ur.srdf  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml  servo_config2.yaml  servo_config3.yaml  servo_config_test.yaml  servo_config_test2.yaml  servo_important.txt
ur20_custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  pilz2.launch.py  rsp_custom.launch.py  servo.launch.py  servo2.launch.py  servo_standalone.launch.py  servo_standalone2.launch.py  test_ros2_control.launch.py  ur_moveit.launch.py
ur5_cutting_demo/: CMakeLists.txt  package.xml
ur5_cutting_demo/launch/: ur5_controller_movegroup.launch.py
ur_custom_control/: CMakeLists.txt  package.xml
ur_custom_control/launch/: rsp.launch.py  start_robot.launch.py
ur_custom_control/urdf/: ur_custom_controlled.urdf.xacro
ur_custom_description/meshes/: nozzle2.dae
ur_custom_description/meshes/collision/: nozzle.stl
ur_custom_description/meshes/visual/: nozzle.dae
ur_custom_description/urdf/: custom_ur.urdf.xacro  custom_ur_macro.xacro  custom_ur_rotated.urdf.xacro  ur_macro.xacro
ur_custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_custom_moveit_config/config/: custom_ur.srdf  kinematics.yaml  moveit_controllers.yaml
ur_custom_moveit_config/launch/: demo.launch.py  demo_custom.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
waypoint_server/: CMakeLists.txt  package.xml
