<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_servo_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lovehult98@gmail.com">carl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_seed_generator</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
