<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reach_ros_display_custom</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lovehult98@gmail.com">carl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Boost</depend>
  <depend>eigen</depend>
  <depend>ros_industrial_cmake_boilerplate</depend>
  <depend>boost_plugin_loader</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libomp-dev</depend>
  <depend>yaml-cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>tf2_eigen</depend>
  <depend>interactive_markers</depend>
  <depend>reach</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
